...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_limit_seek_bar" />

    <SeekBar
        android:id="@+id/ziel_number_seek_bar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:max="2"
        android:min="1"
        android:progressTint="@color/secondaryLime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ziel_number_text" />

    <Button
        android:id="@+id/create_spiel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create new game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
