<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SpielActivity">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

    <TextView
        android:id="@+id/ziel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Ziel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/ziel_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="1 / 5"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ziel_name" />

    <Button
        android:id="@+id/center_on_player"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/focus_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_center_focus_strong_24"
        app:layout_constraintBottom_toBottomOf="@+id/center_on_player"
        app:layout_constraintEnd_toEndOf="@+id/center_on_player"
        app:layout_constraintStart_toStartOf="@+id/center_on_player"
        app:layout_constraintTop_toTopOf="@+id/center_on_player" />

    <Button
        android:id="@+id/next_ziel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="Nächstes Ziel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ziel_counter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gewonnen_text"
        android:text="Gewonnen"
        android:textStyle="bold"
        android:textColor="@color/primaryGreen"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@id/return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:backgroundTint="@color/primaryDarkGreen"
        android:elevation="8dp"
        android:text="Zurück zum Hauptmenü"
        />

    <Button
        android:id="@+id/aufgeben_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aufgeben"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/next_ziel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next_ziel"
        app:layout_constraintTop_toTopOf="@+id/next_ziel" />

</androidx.constraintlayout.widget.ConstraintLayout>