...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" -->

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:text="Start Game"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resumeGameButton"
        android:layout_width="240dp"
        android:layout_height="120dp"
        android:text="Resume Game"
        android:textSize="32sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
...
