<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_start"
            android:title="Start"/>

        <item
            android:id="@+id/nav_spiele"
            android:icon="@drawable/nav_spiele"
            android:title="Spiele"/>


        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/nav_stats"
            android:title="Statistiken"/>

        <item
            android:id="@+id/nav_listen"
            android:icon="@drawable/nav_listen"
            android:title="Ortlisten"/>
    </group>

</menu>